--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
