--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.18.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
