--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
